DatasetDOMStringMap does not have the right memory model https://bugs.webkit.org/show_bug.cgi?id=45358

Reviewed by Dan Bernstein.

WebCore:

Test: fast/dom/dataset-gc.html

* bindings/js/JSElementCustom.cpp:
(WebCore::JSElement::markChildren):
Mark the dataset if it exists.

* dom/Element.cpp:
(WebCore::Element::optionalDataset):
* dom/Element.h:
Expose a way to get the dataset or null (depending on if anyone thing
has forced its creation yet).

LayoutTests:

Test that the dataset persists gc.

* fast/dom/dataset-gc-expected.txt: Added.
* fast/dom/dataset-gc.html: Added.
* fast/dom/script-tests/dataset-gc.js: Added.



Canonical link: https://commits.webkit.org/57707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66954 268f45cc-cd09-0410-ab3c-d52691b4dbfc