WebCore/dom/Element.cpp
@@ -1558,6 +1558,13 @@ DOMStringMap* Element::dataset()
     return data->m_datasetDOMStringMap.get();
 }
 
+DOMStringMap* Element::optionalDataset() const
+{
+    if (!hasRareData())
+        return 0;
+    return rareData()->m_datasetDOMStringMap.get();
+}
+
 KURL Element::getURLAttribute(const QualifiedName& name) const
 {
 #if !ASSERT_DISABLED
