WebCore/dom/Element.h
@@ -270,6 +270,7 @@ public:
     bool webkitMatchesSelector(const String& selectors, ExceptionCode&);
 
     DOMStringMap* dataset();
+    DOMStringMap* optionalDataset() const;
 
     virtual bool isFormControlElement() const { return false; }
     virtual bool isEnabledFormControl() const { return true; }
